update title font variant

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -45,6 +45,7 @@ body {
     padding-inline: 5px;
     flex-grow: 1;
     font-size: 1.2rem;
+    font-variant: small-caps;
     font-family: Verdana, sans-serif;
     text-align: center;
 }
